--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="components/config/confing.css">
     <link rel="stylesheet" href="components/navBar/navBar.css">
+    <link rel="stylesheet" href="components/proyect/project.css">
 
 </head>
 <body>
@@ -17,5 +18,6 @@
     <!-- funciones -->
     <script src="main.js" type="module"></script>
     <script src="components/navBar/navBar.js"></script>
+    <script src="components/proyect/project.js"></script>
 </body>
 </html>
