--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="components/config/confing.css">
     <link rel="stylesheet" href="components/navBar/navBar.css">
     <link rel="stylesheet" href="components/proyect/project.css">
+    <link rel="stylesheet" href="components/header/header.css">
 
 </head>
 <body>
@@ -17,7 +18,6 @@
     <main id="root"></main>
     <!-- funciones -->
     <script src="main.js" type="module"></script>
-    <script src="components/navBar/navBar.js"></script>
-    <script src="components/proyect/project.js"></script>
+
 </body>
 </html>
